Add header navigation and router functionality to portfolio

--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Phạm Gia Khang | Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
     
+</head>
+
+<body>
+    <header class="header">
+        <nav>
+            <h1 class="logo">Logo</h1>
+            <ul class="nav-links">
+                <li class="nav-link active">
+                    <a href="/" >Home</a>
+                </li>
+                <li class="nav-link"><a href="/project">Projects</a></li>
+                <li class="nav-link"><a href="/contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- <section class="hero">
+        <div class="hero-content">
+            <h2>Hi, I'm</h2>
+            <h1>Phạm Gia Khang</h1>
+            <h3>Software Engineering Student</h3>
+            <div class="buttons">
+                <a href="#" class="btn btn-outline">Get My CV</a>
+            </div>
+        </div>
+        <div class="hero-image">
+            <img src="avatar.png" alt="Profile" />
+        </div>
+    </section> -->
 </body>
+<script src="main.js" type="module"></script>
+
 </html>
