Add HomePage and ProjectPage components with styling and routing functionality

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phạm Gia Khang | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    
+
 </head>
 
 <body>
@@ -15,7 +15,7 @@
             <h1 class="logo">Logo</h1>
             <ul class="nav-links">
                 <li class="nav-link active">
-                    <a href="/" >Home</a>
+                    <a href="/">Home</a>
                 </li>
                 <li class="nav-link"><a href="/project">Projects</a></li>
                 <li class="nav-link"><a href="/contact">Contact</a></li>
@@ -23,19 +23,60 @@
         </nav>
     </header>
 
-    <!-- <section class="hero">
-        <div class="hero-content">
-            <h2>Hi, I'm</h2>
-            <h1>Phạm Gia Khang</h1>
-            <h3>Software Engineering Student</h3>
-            <div class="buttons">
-                <a href="#" class="btn btn-outline">Get My CV</a>
+    <main>
+
+    </main>
+
+    <template id="home-page">
+        <section class="home-page info">
+            <div class="home-page info-content">
+                <h1>Hi, I am Khang, Software Engineer student</h1>
+                <p>My name is Khang. I'm currently a final year student of HCMUS</p>
+                <div class="home-page buttons">
+                    <a href="#" class="btn btn-outline">Download Resume</a>
+                </div>
             </div>
-        </div>
-        <div class="hero-image">
-            <img src="avatar.png" alt="Profile" />
-        </div>
-    </section> -->
+            <div class="home-page avatar">
+                <img src="./assets/avatar.jpg" class="home-page img" />
+            </div>
+        </section>
+        <section class="skills">
+            <p>Skills</p>
+            <ul class="skill-list">
+                <li>
+                    <img src="./assets/css.png" class="skill-list-img"/>
+                </li>
+                <li>
+                    <img src="./assets/github.png" class="skill-list-img"/>
+                </li>
+                <li>
+                    <img src="./assets/html.png" class="skill-list-img"/>
+                </li>
+                <li>
+                    <img src="./assets/js.png" class="skill-list-img"/>
+                </li>
+                <li>
+                    <img src="./assets/nextjs.png" class="skill-list-img"/>
+                </li>
+                <li>
+                    <img src="./assets/nodejs.png" class="skill-list-img"/>
+                </li>
+                <li>
+                    <img src="./assets/react.png" class="skill-list-img"/>
+                </li>
+            </ul>
+        </section>
+    </template>
+
+    <template id="project-page">
+
+    </template>
+
+    <template id="contact-page">
+
+    </template>
+
+
 </body>
 <script src="main.js" type="module"></script>
 
