--- a/index.html
+++ b/index.html
@@ -24,6 +24,39 @@
             </li>
             <div class="nav-indicator"></div> <!-- Slide indicator -->
         </ul>
+        <div class="mobile-nav">
+            <div class="mobile-toggle">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                    <path
+                        d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z" />
+                </svg>
+            </div>
+
+            <!-- Mobile Menu Overlay -->
+            <div class="mobile-menu">
+                <div class="mobile-menu-header">
+                    <h2 class="mobile-logo">Logo</h2>
+                    <div class="mobile-close">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                            <path
+                                d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+                        </svg>
+                    </div>
+                </div>
+
+                <ul class="mobile-nav-links">
+                    <li class="mobile-nav-link active nav-link" data-route="/">
+                        <a href="/">Home</a>
+                    </li>
+                    <li class="mobile-nav-link nav-link" data-route="/project">
+                        <a href="/project">Projects</a>
+                    </li>
+                    <li class="mobile-nav-link nav-link" data-route="/contact">
+                        <a href="/contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -159,7 +192,7 @@
                     </a>
                 </li>
                 <li class="contact-logo-item contact-logo-icon">
-                    <a href="#">
+                    <a href="https://linkedin.com/in/khang-pham-a10875359" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                             <path
@@ -168,7 +201,7 @@
                     </a>
                 </li>
                 <li class="contact-logo-item contact-logo-icon">
-                    <a>
+                    <a href="https://github.com/Khang080704" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                             <path
