update real image

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             <p>Feature work</p>
             <ul class="home-page-project-list">
                 <li class="home-page-project-item">
-                    <div>
-                        <img src="./assets/avatar.jpg" class="home-page-project-img" />
+                    <div class="img-container"> 
+                        <img src="./assets/Projects/QLSTK.jpg" class="home-page-project-img" />
                     </div>
                     <div class="home-page-project-info">
                         <h1 class="home-page-project-title">Saving system management</h1>
@@ -145,8 +145,8 @@
                 </li>
 
                 <li class="home-page-project-item">
-                    <div>
-                        <img src="./assets/avatar.jpg" class="home-page-project-img" />
+                    <div class="img-container"> 
+                        <img src="./assets/Projects/AIVIdeo.jpg" class="home-page-project-img" />
                     </div>
                     <div class="home-page-project-info">
                         <h1 class="home-page-project-title">AI Short Video Creator</h1>
@@ -176,6 +176,36 @@
                     </div>
                 </li>
 
+                <li class="home-page-project-item">
+                    <div class="img-container"> 
+                        <img src="https://camo.githubusercontent.com/7e87070a18d2d376f455d2da28adfb520ba64003aa11a001aed269a9d13356b7/68747470733a2f2f692e706f7374696d672e63632f35314852304c477a2f666f6f64706167652d73746172742e706e67" class="home-page-project-img" />
+                    </div>
+                    <div class="home-page-project-info">
+                        <h1 class="home-page-project-title">Keep It Fit</h1>
+                        <div class="home-page-project-container">
+                            <div class="time-container">
+                                <div class="home-page-project-time">
+                                    <p>2024</p>
+                                </div>
+                            </div>
+                            <ul class="home-page-project-tech">
+                                <li>
+                                    <img src="./assets/winui3.png" alt="tech" class="home-page-project-tech-img">
+                                </li>
+                                <li>
+                                    <img src="./assets/sql-server.png" alt="tech" class="home-page-project-tech-img">
+                                </li>
+                                <li>
+                                    <img src="./assets/knex.png" alt="tech" class="home-page-project-tech-img">
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="home-page-project-description">
+                            An application that allows users to track their daily calories intake
+                        </div>
+                    </div>
+                </li>
+
             </ul>
         </section>
 
@@ -183,7 +213,7 @@
         <section class="contact">
             <ul class="contact-logo-list">
                 <li class="contact-logo-item contact-logo-icon">
-                    <a href="#">
+                    <a href="https://www.facebook.com/giakhang.pham.583" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                             <path
