implement basic layout for project page

--- a/index.html
+++ b/index.html
@@ -69,36 +69,36 @@
                 <h1>Hi, I am Khang, Software Engineer student</h1>
                 <p>My name is Khang. I'm currently a final year student of HCMUS</p>
                 <div class="home-page buttons">
-                    <a href="#" class="btn btn-outline">Download Resume</a>
+                    <a href="./assets/CV/PhamGiaKhang-CV.pdf" download="" class="btn btn-outline">Download Resume</a>
                 </div>
             </div>
             <div class="home-page avatar">
-                <img src="./assets/avatar.jpg" class="home-page img" />
+                <img src="./assets/Tech/avatar.jpg" class="home-page img" />
             </div>
         </section>
         <section class="skills">
             <p>Skills</p>
             <ul class="skill-list">
                 <li>
-                    <img src="./assets/html.png" class="skill-list-img" />
+                    <img src="./assets/Tech/html.png" class="skill-list-img" />
                 </li>
                 <li>
-                    <img src="./assets/css.png" class="skill-list-img" />
+                    <img src="./assets/Tech/css.png" class="skill-list-img" />
                 </li>
                 <li>
-                    <img src="./assets/js.png" class="skill-list-img" />
+                    <img src="./assets/Tech/js.png" class="skill-list-img" />
                 </li>
                 <li>
-                    <img src="./assets/react.png" class="skill-list-img" />
+                    <img src="./assets/Tech/react.png" class="skill-list-img" />
                 </li>
                 <li>
-                    <img src="./assets/nextjs.png" class="skill-list-img" />
+                    <img src="./assets/Tech/nextjs.png" class="skill-list-img" />
                 </li>
                 <li>
-                    <img src="./assets/nodejs.png" class="skill-list-img" />
+                    <img src="./assets/Tech/nodejs.png" class="skill-list-img" />
                 </li>
                 <li>
-                    <img src="./assets/github.png" class="skill-list-img" />
+                    <img src="./assets/Tech/github.png" class="skill-list-img" />
                 </li>
 
 
@@ -110,7 +110,7 @@
             <p>Feature work</p>
             <ul class="home-page-project-list">
                 <li class="home-page-project-item">
-                    <div class="img-container"> 
+                    <div class="img-container">
                         <img src="./assets/Projects/QLSTK.jpg" class="home-page-project-img" />
                     </div>
                     <div class="home-page-project-info">
@@ -123,16 +123,16 @@
                             </div>
                             <ul class="home-page-project-tech">
                                 <li>
-                                    <img src="./assets/html.png" alt="tech" class="home-page-project-tech-img">
+                                    <img src="./assets/Tech/html.png" alt="tech" class="home-page-project-tech-img">
                                 </li>
                                 <li>
-                                    <img src="./assets/css.png" alt="tech" class="home-page-project-tech-img">
+                                    <img src="./assets/Tech/css.png" alt="tech" class="home-page-project-tech-img">
                                 </li>
                                 <li>
-                                    <img src="./assets/js.png" alt="tech" class="home-page-project-tech-img">
+                                    <img src="./assets/Tech/js.png" alt="tech" class="home-page-project-tech-img">
                                 </li>
                                 <li>
-                                    <img src="./assets/nodejs.png" alt="tech" class="home-page-project-tech-img">
+                                    <img src="./assets/Tech/nodejs.png" alt="tech" class="home-page-project-tech-img">
                                 </li>
                             </ul>
                         </div>
@@ -145,7 +145,7 @@
                 </li>
 
                 <li class="home-page-project-item">
-                    <div class="img-container"> 
+                    <div class="img-container">
                         <img src="./assets/Projects/AIVIdeo.jpg" class="home-page-project-img" />
                     </div>
                     <div class="home-page-project-info">
@@ -158,10 +158,10 @@
                             </div>
                             <ul class="home-page-project-tech">
                                 <li>
-                                    <img src="./assets/nextjs.png" alt="tech" class="home-page-project-tech-img">
+                                    <img src="./assets/Tech/nextjs.png" alt="tech" class="home-page-project-tech-img">
                                 </li>
                                 <li>
-                                    <img src="./assets//react.png" alt="tech" class="home-page-project-tech-img">
+                                    <img src="./assets/Tech/react.png" alt="tech" class="home-page-project-tech-img">
                                 </li>
                             </ul>
                         </div>
@@ -177,8 +177,9 @@
                 </li>
 
                 <li class="home-page-project-item">
-                    <div class="img-container"> 
-                        <img src="https://camo.githubusercontent.com/7e87070a18d2d376f455d2da28adfb520ba64003aa11a001aed269a9d13356b7/68747470733a2f2f692e706f7374696d672e63632f35314852304c477a2f666f6f64706167652d73746172742e706e67" class="home-page-project-img" />
+                    <div class="img-container">
+                        <img src="https://camo.githubusercontent.com/7e87070a18d2d376f455d2da28adfb520ba64003aa11a001aed269a9d13356b7/68747470733a2f2f692e706f7374696d672e63632f35314852304c477a2f666f6f64706167652d73746172742e706e67"
+                            class="home-page-project-img" />
                     </div>
                     <div class="home-page-project-info">
                         <h1 class="home-page-project-title">Keep It Fit</h1>
@@ -190,13 +191,14 @@
                             </div>
                             <ul class="home-page-project-tech">
                                 <li>
-                                    <img src="./assets/winui3.png" alt="tech" class="home-page-project-tech-img">
+                                    <img src="./assets/Tech/winui3.png" alt="tech" class="home-page-project-tech-img">
                                 </li>
                                 <li>
-                                    <img src="./assets/sql-server.png" alt="tech" class="home-page-project-tech-img">
+                                    <img src="./assets/Tech/sql-server.png" alt="tech"
+                                        class="home-page-project-tech-img">
                                 </li>
                                 <li>
-                                    <img src="./assets/knex.png" alt="tech" class="home-page-project-tech-img">
+                                    <img src="./assets/Tech/knex.png" alt="tech" class="home-page-project-tech-img">
                                 </li>
                             </ul>
                         </div>
@@ -245,7 +247,209 @@
     </template>
 
     <template id="project-page">
+        <div class="container">
+            <h1 class="page-title">Projects</h1>
 
+            <div class="projects-container">
+                <!-- Project 1 -->
+                <div class="project">
+                    <div class="project-image">
+                        <div class="project-placeholder">E-Commerce Platform</div>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h2 class="project-title">Saving system management</h2>
+                            <div class="project-time">2024 - 2025</div>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Key features</h3>
+                            <ul class="features-list">
+                                <li>Using MVC design pattern with Restful API and JSON data format</li>
+                                <li>Implemented features for creating, searching, depositing, and withdrawing for saving
+                                    accounts</li>
+                                <li>Implemented monthly statistics for account numbers</li>
+                                <li>Adding, deleting terms and modifying the minimum deposit amount for each term</li>
+                            </ul>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Role</h3>
+                            <div class="role-tag">Backend Developer</div>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Responsibilities</h3>
+                            <ul class="responsibilities-list">
+                                <li>Built a backend server using Node.js and Express to handle CRUD operations for
+                                    savings books and
+                                    transactions.</li>
+                                <li>Implemented dynamic front-end views using EJS template engine for seamless page
+                                    rendering.</li>
+                                <li> Structured the project following the separation of concerns principle, dividing
+                                    frontend static files
+                                    (HTML, CSS, JS) and backend server logic.</li>
+                                <li>Developed search and filter functionality based on date, balance amount, and savings
+                                    status.</li>
+                            </ul>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Công nghệ sử dụng</h3>
+                            <div class="tech-stack">
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-html"></div>
+                                    <span>HTML5</span>
+                                </div>
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-css"></div>
+                                    <span>CSS3</span>
+                                </div>
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-js"></div>
+                                    <span>JavaScript</span>
+                                </div>
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-node"></div>
+                                    <span>Node.js</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <div class="project-image">
+                        <div class="project-placeholder">E-Commerce Platform</div>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h2 class="project-title">Saving system management</h2>
+                            <div class="project-time">2024 - 2025</div>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Key features</h3>
+                            <ul class="features-list">
+                                <li>Using MVC design pattern with Restful API and JSON data format</li>
+                                <li>Implemented features for creating, searching, depositing, and withdrawing for saving
+                                    accounts</li>
+                                <li>Implemented monthly statistics for account numbers</li>
+                                <li>Adding, deleting terms and modifying the minimum deposit amount for each term</li>
+                            </ul>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Role</h3>
+                            <div class="role-tag">Backend Developer</div>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Responsibilities</h3>
+                            <ul class="responsibilities-list">
+                                <li>Built a backend server using Node.js and Express to handle CRUD operations for
+                                    savings books and
+                                    transactions.</li>
+                                <li>Implemented dynamic front-end views using EJS template engine for seamless page
+                                    rendering.</li>
+                                <li> Structured the project following the separation of concerns principle, dividing
+                                    frontend static files
+                                    (HTML, CSS, JS) and backend server logic.</li>
+                                <li>Developed search and filter functionality based on date, balance amount, and savings
+                                    status.</li>
+                            </ul>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Công nghệ sử dụng</h3>
+                            <div class="tech-stack">
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-html"></div>
+                                    <span>HTML5</span>
+                                </div>
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-css"></div>
+                                    <span>CSS3</span>
+                                </div>
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-js"></div>
+                                    <span>JavaScript</span>
+                                </div>
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-node"></div>
+                                    <span>Node.js</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <div class="project-image">
+                        <div class="project-placeholder">E-Commerce Platform</div>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h2 class="project-title">Saving system management</h2>
+                            <div class="project-time">2024 - 2025</div>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Key features</h3>
+                            <ul class="features-list">
+                                <li>Using MVC design pattern with Restful API and JSON data format</li>
+                                <li>Implemented features for creating, searching, depositing, and withdrawing for saving
+                                    accounts</li>
+                                <li>Implemented monthly statistics for account numbers</li>
+                                <li>Adding, deleting terms and modifying the minimum deposit amount for each term</li>
+                            </ul>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Role</h3>
+                            <div class="role-tag">Backend Developer</div>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Responsibilities</h3>
+                            <ul class="responsibilities-list">
+                                <li>Built a backend server using Node.js and Express to handle CRUD operations for
+                                    savings books and
+                                    transactions.</li>
+                                <li>Implemented dynamic front-end views using EJS template engine for seamless page
+                                    rendering.</li>
+                                <li> Structured the project following the separation of concerns principle, dividing
+                                    frontend static files
+                                    (HTML, CSS, JS) and backend server logic.</li>
+                                <li>Developed search and filter functionality based on date, balance amount, and savings
+                                    status.</li>
+                            </ul>
+                        </div>
+
+                        <div class="project-section">
+                            <h3 class="section-title">Công nghệ sử dụng</h3>
+                            <div class="tech-stack">
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-html"></div>
+                                    <span>HTML5</span>
+                                </div>
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-css"></div>
+                                    <span>CSS3</span>
+                                </div>
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-js"></div>
+                                    <span>JavaScript</span>
+                                </div>
+                                <div class="tech-item">
+                                    <div class="tech-icon tech-node"></div>
+                                    <span>Node.js</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </template>
 
     <template id="contact-page">
