--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                                 </div>
                                 <div class="tech-item">
                                     <div class="tech-icon tech-node"></div>
-                                    <span>Node.js</span>
+                                    <span>Express</span>
                                 </div>
                             </div>
                         </div>
