update prj page

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <ul class="home-page-project-list">
                 <li class="home-page-project-item">
                     <div class="img-container">
-                        <img src="./assets/Projects/QLSTK.jpg" class="home-page-project-img" />
+                        <img src="./assets/Projects/QLSTK/QLSTK.jpg" class="home-page-project-img" />
                     </div>
                     <div class="home-page-project-info">
                         <h1 class="home-page-project-title">Saving system management</h1>
@@ -254,13 +254,36 @@
                 <!-- Project 1 -->
                 <div class="project">
                     <div class="project-image">
-                        <div class="project-placeholder">E-Commerce Platform</div>
+                        <div class="project-placeholder"></div>
+                    </div>
+                    <div class="category-container">
+                        <div class="category">
+                            <div class="category-title">
+                                <h1>Times</h1>
+                                <p>2024 - 2025</p>
+                            </div>
+                            <div class="category-title">
+                                <h1>Team size</h1>
+                                <p>4</p>
+                            </div>
+                            <div class="category-title">
+                                <h1>Category</h1>
+                                <p>Software</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="project-content">
                         <div class="project-header">
                             <h2 class="project-title">Saving system management</h2>
-                            <div class="project-time">2024 - 2025</div>
+                            <p class="project-description">
+                                This is a savings account management platform built using the MVC architecture with
+                                RESTful APIs and JSON data format. The system allows users to manage their savings
+                                accounts efficiently, with features for account creation, transactions, and customizable
+                                term settings.
+                            </p>
                         </div>
+
+                        <img src="./assets/Projects/QLSTK/hinh 1.jpg" class="img"/>
 
                         <div class="project-section">
                             <h3 class="section-title">Key features</h3>
@@ -318,137 +341,7 @@
                     </div>
                 </div>
 
-                <div class="project">
-                    <div class="project-image">
-                        <div class="project-placeholder">E-Commerce Platform</div>
-                    </div>
-                    <div class="project-content">
-                        <div class="project-header">
-                            <h2 class="project-title">Saving system management</h2>
-                            <div class="project-time">2024 - 2025</div>
-                        </div>
 
-                        <div class="project-section">
-                            <h3 class="section-title">Key features</h3>
-                            <ul class="features-list">
-                                <li>Using MVC design pattern with Restful API and JSON data format</li>
-                                <li>Implemented features for creating, searching, depositing, and withdrawing for saving
-                                    accounts</li>
-                                <li>Implemented monthly statistics for account numbers</li>
-                                <li>Adding, deleting terms and modifying the minimum deposit amount for each term</li>
-                            </ul>
-                        </div>
-
-                        <div class="project-section">
-                            <h3 class="section-title">Role</h3>
-                            <div class="role-tag">Backend Developer</div>
-                        </div>
-
-                        <div class="project-section">
-                            <h3 class="section-title">Responsibilities</h3>
-                            <ul class="responsibilities-list">
-                                <li>Built a backend server using Node.js and Express to handle CRUD operations for
-                                    savings books and
-                                    transactions.</li>
-                                <li>Implemented dynamic front-end views using EJS template engine for seamless page
-                                    rendering.</li>
-                                <li> Structured the project following the separation of concerns principle, dividing
-                                    frontend static files
-                                    (HTML, CSS, JS) and backend server logic.</li>
-                                <li>Developed search and filter functionality based on date, balance amount, and savings
-                                    status.</li>
-                            </ul>
-                        </div>
-
-                        <div class="project-section">
-                            <h3 class="section-title">Công nghệ sử dụng</h3>
-                            <div class="tech-stack">
-                                <div class="tech-item">
-                                    <div class="tech-icon tech-html"></div>
-                                    <span>HTML5</span>
-                                </div>
-                                <div class="tech-item">
-                                    <div class="tech-icon tech-css"></div>
-                                    <span>CSS3</span>
-                                </div>
-                                <div class="tech-item">
-                                    <div class="tech-icon tech-js"></div>
-                                    <span>JavaScript</span>
-                                </div>
-                                <div class="tech-item">
-                                    <div class="tech-icon tech-node"></div>
-                                    <span>Node.js</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project">
-                    <div class="project-image">
-                        <div class="project-placeholder">E-Commerce Platform</div>
-                    </div>
-                    <div class="project-content">
-                        <div class="project-header">
-                            <h2 class="project-title">Saving system management</h2>
-                            <div class="project-time">2024 - 2025</div>
-                        </div>
-
-                        <div class="project-section">
-                            <h3 class="section-title">Key features</h3>
-                            <ul class="features-list">
-                                <li>Using MVC design pattern with Restful API and JSON data format</li>
-                                <li>Implemented features for creating, searching, depositing, and withdrawing for saving
-                                    accounts</li>
-                                <li>Implemented monthly statistics for account numbers</li>
-                                <li>Adding, deleting terms and modifying the minimum deposit amount for each term</li>
-                            </ul>
-                        </div>
-
-                        <div class="project-section">
-                            <h3 class="section-title">Role</h3>
-                            <div class="role-tag">Backend Developer</div>
-                        </div>
-
-                        <div class="project-section">
-                            <h3 class="section-title">Responsibilities</h3>
-                            <ul class="responsibilities-list">
-                                <li>Built a backend server using Node.js and Express to handle CRUD operations for
-                                    savings books and
-                                    transactions.</li>
-                                <li>Implemented dynamic front-end views using EJS template engine for seamless page
-                                    rendering.</li>
-                                <li> Structured the project following the separation of concerns principle, dividing
-                                    frontend static files
-                                    (HTML, CSS, JS) and backend server logic.</li>
-                                <li>Developed search and filter functionality based on date, balance amount, and savings
-                                    status.</li>
-                            </ul>
-                        </div>
-
-                        <div class="project-section">
-                            <h3 class="section-title">Công nghệ sử dụng</h3>
-                            <div class="tech-stack">
-                                <div class="tech-item">
-                                    <div class="tech-icon tech-html"></div>
-                                    <span>HTML5</span>
-                                </div>
-                                <div class="tech-item">
-                                    <div class="tech-icon tech-css"></div>
-                                    <span>CSS3</span>
-                                </div>
-                                <div class="tech-item">
-                                    <div class="tech-icon tech-js"></div>
-                                    <span>JavaScript</span>
-                                </div>
-                                <div class="tech-item">
-                                    <div class="tech-icon tech-node"></div>
-                                    <span>Express</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
     </template>
 
