--- a/index.html
+++ b/index.html
@@ -283,17 +283,55 @@
                             </p>
                         </div>
 
-                        <img src="./assets/Projects/QLSTK/hinh 1.jpg" class="img"/>
+                        <div class="github-container">
+                            <div class="btn-github">
+                                <a href="https://github.com/Khang080704/Project_Backend.git" target="_blank">Go to
+                                    Github</a>
+                            </div>
+                        </div>
+
+                        <img src="./assets/Projects/QLSTK/hinh 1.jpg" class="img" />
 
                         <div class="project-section">
                             <h3 class="section-title">Key features</h3>
-                            <ul class="features-list">
+                            <div class="slideshow-container">
+
+                                <div class="mySlides fade">
+                                    <div class="numbertext">1 / 3</div>
+                                    <img src="./assets/Projects/QLSTK/hinh 1.jpg" style="width:100%">
+                                    <div class="text">Caption Text</div>
+                                </div>
+
+                                <div class="mySlides fade">
+                                    <div class="numbertext">2 / 3</div>
+                                    <img src="./assets/Projects/AIVIdeo.jpg" style="width:100%">
+                                    <div class="text">Caption Two</div>
+                                </div>
+
+                                <div class="mySlides fade">
+                                    <div class="numbertext">3 / 3</div>
+                                    <img src="./assets/Projects/QLSTK/QLSTK.jpg" style="width:100%">
+                                    <div class="text">Caption Three</div>
+                                </div>
+
+                                <a class="prev" onclick="plusSlides(-1)">❮</a>
+                                <a class="next" onclick="plusSlides(1)">❯</a>
+
+                            </div>
+                            <br>
+
+                            <div style="text-align:center">
+                                <span class="dot" onclick="currentSlide(1)"></span>
+                                <span class="dot" onclick="currentSlide(2)"></span>
+                                <span class="dot" onclick="currentSlide(3)"></span>
+                            </div>
+                            <!-- <ul class="features-list">
                                 <li>Using MVC design pattern with Restful API and JSON data format</li>
                                 <li>Implemented features for creating, searching, depositing, and withdrawing for saving
                                     accounts</li>
                                 <li>Implemented monthly statistics for account numbers</li>
                                 <li>Adding, deleting terms and modifying the minimum deposit amount for each term</li>
-                            </ul>
+                            </ul> -->
                         </div>
 
                         <div class="project-section">
